src/snapshots/remendo_tui__ui__tests__view_renders_error_state.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"┌ remendo | ERROR: connection refused ─────────────────────────────────────────┐"
"│No remotes configured.                                                        │"
"│                                                                              │"
"│To get started:                                                               │"
"│  1. cp config.example.toml ~/.config/remendo/config.toml                     │"
"│  2. Edit the file and set your Sashiko instance URL                          │"
"│  3. Restart remendo                                                          │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
