src/snapshots/remendo_tui__ui__tests__view_renders_patchset_table.snap
---
source: src/ui.rs
assertion_line: 698
expression: terminal.backend()
---
"┌ Remotes (1) ─────────┐┌ remendo | upstream | 1 patchsets ────────────────────────────────────────────────────────────┐"
"│upstream              ││    Statu Subject                        Author               Date       Findings   Subsystems│"
"└──────────────────────┘│    Revie [PATCH v2 1/3] Fix null deref  developer@example.co 2026-05-13 2M 1L      netfilter-│"
"┌ Lists (0) ───────────┐│                                                                                              │"
"│(none)                ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────┘"
