src/snapshots/remendo_tui__ui__tests__view_renders_sidebar_focus.snap
---
source: src/ui.rs
assertion_line: 710
expression: terminal.backend()
---
"┌ Remotes (2) ─────────┐┌ remendo | upstream | 0 patchsets ────────────────────────────────────────────────────────────┐"
"│upstream              ││Loading...                                                                                    │"
"│staging               ││                                                                                              │"
"└──────────────────────┘│                                                                                              │"
"┌ Lists (0) ───────────┐│                                                                                              │"
"│(none)                ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────┘"
